обновил разметку HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<title>Document</title>
 </head>
 <body>
-	<p class="commit">коммит</p>
+	<header>
+	</header>
+	<main>
+	</main>
+	<footer>
+	</footer>
 </body>
 </html>
